k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbna-outbound
  labels:
    app: dbna-outbound
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: dbna-outbound
